--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
             font-size: 0.85rem;
         }
 
+        /* Info Section Styles */
         .info-section { padding: 20px; }
         .info-title {
             font-size: 1.1rem;
@@ -223,6 +224,7 @@
 
         .weather-warning { background: #ffebee; color: #c62828; padding: 10px; border-radius: 8px; font-size: 0.9rem; margin-bottom: 15px; border: 1px solid #ffcdd2; }
 
+        /* Budget Styles */
         .budget-row { display: flex; justify-content: space-between; padding: 12px 0; border-bottom: 1px solid #eee; }
         .budget-row:last-child { border-bottom: none; }
         .budget-cat { font-weight: 600; color: #555; }
@@ -378,23 +380,6 @@
                 氣溫 -5°C 至 -15°C。室內暖氣強，請務必採「洋蔥式穿搭」。
             </div>
             
-            <div class="info-title">📱 離線保存小撇步 (iPhone)</div>
-            <div class="checklist-item" style="background:#fff3e0; padding:10px; border-radius:8px; border:1px solid #ffe0b2;">
-                <span class="check-icon">💡</span> <strong>想當成 App 離線使用？</strong><br>
-                1. 接收檔案後，儲存到<strong>「檔案 (Files)」</strong><br>
-                2. 長按檔案 > 分享 > 選擇<strong>「備忘錄 (Notes)」</strong><br>
-                3. 從備忘錄點開圖示，即可<strong>全螢幕+離線</strong>瀏覽！
-            </div>
-
-            <div class="info-title">🌐 上架到 GitHub Pages (進階)</div>
-            <div class="checklist-item" style="background:#e3f2fd; padding:10px; border-radius:8px; border:1px solid #bbdefb;">
-                <span class="check-icon">🚀</span> <strong>變身為永久網頁 App：</strong><br>
-                1. 在 GitHub 建立新 Repository<br>
-                2. 上傳此檔案並改名為 <strong>index.html</strong><br>
-                3. 到 Settings > Pages > 啟用 Source (main)<br>
-                4. 幾分鐘後即可獲得專屬網址分享！
-            </div>
-
             <div class="info-title">📋 必要文件 & 金錢</div>
             <div class="checklist-item"><span class="check-icon">✓</span> 護照 (效期 > 6個月)</div>
             <div class="checklist-item"><span class="check-icon">✓</span> ESTA 核准證明 (截圖/紙本)</div>
