--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>芝加哥冬日之旅 1/21-31</title>
+    <title>芝加哥之旅 1/21-31</title>
     <style>
         :root {
             --primary: #2c3e50;
