Update flight times format in index.html

--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
           <div class="details">
             Annie 班機抵達 ORD。
             <div class="flight-path friend-path">
-              6:25 AM LAX &gt; 12:32 PM ORD
+              6:25 LAX &gt; 12:32 ORD
             </div>
             班機 (12:55) 時間近，在機場會合。
           </div>
@@ -819,7 +819,7 @@
           <div class="details">
             Annie 結束兩天快閃行程。班機 20:10 起飛。
             <div class="flight-path friend-path">
-              8:10 PM ORD &gt; 10:59 PM LAX
+              20:10 ORD &gt; 22:59 LAX
             </div>
           </div>
           <div class="tags"><span class="tag tag-friend">Friend Departure</span></div>
