Update budget amounts and notes in index.html

--- a/index.html
+++ b/index.html
@@ -540,15 +540,15 @@
         <div class="budget-row">
           <div class="budget-cat">🍔 餐飲</div>
           <div style="text-align: right;">
-            <div class="budget-amt">~$900</div>
+            <div class="budget-amt">~$1,000</div>
             <div class="budget-note">Jollibee/Ciccio Mio/分攤後費用</div>
           </div>
         </div>
         <div class="budget-row">
           <div class="budget-cat">🎟 門票</div>
           <div style="text-align: right;">
-            <div class="budget-amt">$250</div>
-            <div class="budget-note">歌劇魅影($150)+遊船/租鞋/Outlet</div>
+            <div class="budget-amt">$285</div>
+            <div class="budget-note">歌劇魅影($150)+觀景台/遊船/租鞋</div>
           </div>
         </div>
         <div class="budget-row">
@@ -561,8 +561,8 @@
 
         <div class="budget-total">
           <div style="font-size: 0.9rem; color: #555;">Yunyi 個人預估總額</div>
-          <div class="budget-total-amt">~$1,315 USD</div>
-          <div style="font-size: 0.8rem; color: #888;">約台幣 42,800 元</div>
+          <div class="budget-total-amt">~$1,450 USD</div>
+          <div style="font-size: 0.8rem; color: #888;">約台幣 47,000 元</div>
         </div>
 
         <!-- View Detail Link -->
@@ -586,7 +586,7 @@
             <tr><td>Day 1: Nonnina</td><td>$60 (3人攤)</td></tr>
             <tr><td>Day 2: Léa + Uno</td><td>$35 (3人攤)</td></tr>
             <tr><td>Day 3: Lou's + Quartino</td><td>$75 (2人攤)</td></tr>
-            <tr><td>Day 4: Portillo's + Jollibee</td><td>$30 (2人攤)</td></tr>
+            <tr><td>Day 4: Portillo's + Jollibee</td><td>$35 (2人攤)</td></tr>
             <tr><td>Day 5: Kasama + Cheval</td><td>$60 (2人攤)</td></tr>
             <tr><td>Day 6: Pho 777 + Ciccio</td><td>$95 (2人攤)</td></tr>
             <tr><td>Day 7: Dearborn</td><td>$45 (2人攤)</td></tr>
@@ -599,16 +599,10 @@
           <div class="detail-section-title">🎟 娛樂與門票 (Entertainment)</div>
           <table class="detail-table">
             <tr><td>歌劇魅影</td><td>$150</td></tr>
-            <tr><td>360 Chicago (Day 1 備案)</td><td>$0 (備案)</td></tr>
+            <tr><td>360 Chicago</td><td>$35</td></tr>
             <tr><td>建築遊船</td><td>$45</td></tr>
             <tr><td>溜冰租鞋</td><td>$20</td></tr>
             <tr><td>Outlet 雜支</td><td>$35</td></tr>
-          </table>
-          
-          <div class="detail-section-title" style="border-left-color: #9ca3af; color: #6b7280;">備案與替代選項 (Backups)</div>
-          <table class="detail-table" style="color: #6b7280;">
-              <tr><td>360 Chicago (Day 1)</td><td>+$35 (額外支出)</td></tr>
-              <tr><td>Green St Meats (Day 9)</td><td>-$10 (比Volare便宜)</td></tr>
           </table>
         </div>
 
@@ -1154,9 +1148,9 @@
           <div class="details">
             水族館 (平日人較少)。<br />
             <span style="color: var(--budget); font-weight: bold;">★ 免費日 (Free Admission)</span><br />
-            <strong class="text-alert">⚠ 即使免費仍需官網預約時段</strong>
+            <strong class="text-alert">★ Reservation Confirmed: 11:00 AM</strong>
           </div>
-          <div class="tags"><span class="tag tag-blue">室內</span><span class="tag tag-red">需預約</span></div>
+          <div class="tags"><span class="tag tag-blue">室內</span><span class="tag tag-red">已預訂</span></div>
         </div>
         <div class="event">
           <div class="time">14:00</div>
